# ChangeLog for dev-perl/Data-Compare
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-Compare/ChangeLog,v 1.29 2008/09/05 08:58:14 tove Exp $

*Data-Compare-1.21 (05 Sep 2008)

  05 Sep 2008; Torsten Veller <tove@gentoo.org> +Data-Compare-1.21.ebuild:
  Version bump

  24 Jul 2008; Torsten Veller <tove@gentoo.org> -Data-Compare-0.13.ebuild,
  -Data-Compare-0.14.ebuild:
  Cleanup

*Data-Compare-1.19 (24 Jul 2008)

  24 Jul 2008; Torsten Veller <tove@gentoo.org> +Data-Compare-1.19.ebuild:
  Version bump

  13 Jun 2008; Raúl Porcel <armin76@gentoo.org> Data-Compare-1.18.ebuild:
  ia64/sparc/x86 stable

*Data-Compare-1.18 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Data-Compare-1.18.ebuild:
  Version bump

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Data-Compare-0.16.ebuild:
  Stable for HPPA too.

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> Data-Compare-0.16.ebuild:
  ia64/x86 stable

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Data-Compare-0.16.ebuild:
  sparc stable

  08 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Data-Compare-0.16.ebuild:
  Marking amd64 stable

*Data-Compare-0.16 (09 Mar 2007)

  09 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  +Data-Compare-0.16.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Data-Compare-0.14.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Data-Compare-0.14.ebuild:
  Stable on IA64.

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Data-Compare-0.14.ebuild:
  Marking sparc stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -Data-Compare-0.11.ebuild, Data-Compare-0.13.ebuild,
  Data-Compare-0.14.ebuild:
  Marking amd64 stable

*Data-Compare-0.14 (06 Nov 2006)

  06 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +Data-Compare-0.14.ebuild:
  Version bump

  07 Aug 2006; Michael Cummings <mcummings@gentoo.org>