@@ -5,6 +5,6 @@ DIST Data-Compare-1.21.tar.gz 14528 RMD160 48205d803073e438c725eaa9e9dde5072ffbb
 EBUILD Data-Compare-0.16.ebuild 574 RMD160 4a0a791fb8dd006ab11d4672a0468c766abfd79e SHA1 425b9756a024fea506e2438952003c49f210235d SHA256 6007d4de62104c44091cc34cad649cb508f1aa2b2710f3fac26d5fd5cc1aa28f
 EBUILD Data-Compare-1.18.ebuild 578 RMD160 3b8fe13c5ead9f2743733367137cf205cb9381c5 SHA1 e158c071ec2347bae8cd81953d58fd85f703ae1d SHA256 2c0840c91207dea48597c959192a84473ab18893eceace7a7dcb95c25793b563
 EBUILD Data-Compare-1.19.ebuild 538 RMD160 46b0a895b4bf04ac901c13d111f734ee895da08c SHA1 dacbe669d916b93ec5eeefcd4dc8c60a09dfb698 SHA256 6406c84f5d8b452c16840824b61e08641ec2086dea9be8fc48c8a6b478af07a0
-EBUILD Data-Compare-1.21.ebuild 538 RMD160 7fae324e157a3b6e4cdc11a11abe029ccef5b8ba SHA1 71e150ecfa683b2cf406d9ec95904d5a95424902 SHA256 24ff1815bb86fdbbc9c40d3931aba150152d63844d292679ec9287cf0666f790
-MISC ChangeLog 3559 RMD160 62a1e96cd8fd2116b90e18b996be26657b8cf221 SHA1 e9a51e0948ee370631621022565292d37eb1f8e3 SHA256 712f3da4fa7ec87f159e092d1f34ca29931e4f2c78a7d243f4da509f9330b1f9
+EBUILD Data-Compare-1.21.ebuild 542 RMD160 de3bfd9b387e9909cdce1e7fd39fcf70eb2687a7 SHA1 a3f588a9ac938b26ce67dd917685deff68277bb6 SHA256 118b26c7dc93ff5c613cff5520ab46e440b2dbebc0216cb574ef0016151b0eb9
+MISC ChangeLog 3806 RMD160 b782e31048baf917d212e37005fcbc18c0afc374 SHA1 7f5bf4f25dd8e922b4d2c89d4d55a8d1878cb02e SHA256 fb77979281b868b02fcc3c6ae23d59031f9fac7727b722e94cfc5d97e850d769
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
