@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Data-Compare
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-Compare/ChangeLog,v 1.29 2008/09/05 08:58:14 tove Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-Compare/ChangeLog,v 1.31 2009/05/02 17:59:08 tove Exp $
+
+  02 May 2009; Torsten Veller <tove@gentoo.org> Data-Compare-1.21.ebuild:
+  Stable on x86 (#268279). Fix LICENSE. Add test dependency
+
+  02 May 2009; Thomas Anderson <gentoofan23@gentoo.org>
+  Data-Compare-1.21.ebuild:
+  stable amd64, bug 268279
 
 *Data-Compare-1.21 (05 Sep 2008)
 
